# cmd/main.go
@@ -1,14 +1,11 @@
 package main
 
 import (
-	_ "chat-app/docs" // replace with the actual path to your docs
 	"log"
 
 	"chat-app/internal/controller"
 
 	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // @title Chat App API
@@ -27,10 +24,5 @@ func main() {
 	ctrl.RegisterRoutes()
 
 	// Swagger endpoint
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	// WebSocket endpoint
-	r.GET("/ws", ctrl.WebSocketHandler)
-
 	r.Run(":8080")
 }
