# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/health": {
+        "/api/v1/health": {
             "get": {
                 "description": "Get the health status of the service",
                 "consumes": [
@@ -35,7 +35,7 @@
                 }
             }
         },
-        "/rooms": {
+        "/api/v1/rooms": {
             "get": {
                 "description": "List available chat rooms",
                 "consumes": [
@@ -96,7 +96,7 @@
                 }
             }
         },
-        "/rooms/{room}/bind": {
+        "/api/v1/rooms/{room}/bind": {
             "get": {
                 "description": "Bind to a given chat room",
                 "consumes": [
@@ -135,7 +135,7 @@
                 }
             }
         },
-        "/ws": {
+        "/api/v1/ws": {
             "get": {
                 "description": "Establish and handle WebSocket connections",
                 "consumes": [
